caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/provides_extendable.caffeine
_base (Provides): { vendor: String }

Blueprints
  "test":
    Requiring { env: String }
    Provides { value: "x" }
